# Pomme-client

./: Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  pnpm-lock.yaml
.github/workflows/: auto-assign.yml  ci.yml  release-client.yml
pomme-client/: Cargo.toml  build.rs
pomme-client/src/: main.rs
pomme-client/src/app/: core.rs  input.rs  mod.rs
pomme-client/src/audio/: mod.rs  sounds.rs
pomme-client/src/net/: commands.rs  connection.rs  handler.rs  mod.rs
pomme-client/src/physics/: movement.rs
pomme-client/src/player/: interaction.rs
pomme-client/src/renderer/: camera.rs  context.rs  mod.rs  shader.rs  swapchain.rs  util.rs
pomme-client/src/ui/: chat.rs  mod.rs  server_list.rs  text.rs
pomme-client/src/window/: mod.rs
pomme-client/src/world/: chunk.rs
pomme-gpu-allocator/: Cargo.toml
pomme-gpu-allocator/examples/: vulkan-buffer.rs
pomme-gpu-allocator/src/: lib.rs  result.rs
pomme-gpu-allocator/src/allocator/: mod.rs
pomme-gpu-allocator/src/allocator/dedicated_block_allocator/: mod.rs
pomme-gpu-allocator/src/allocator/free_list_allocator/: mod.rs  visualizer.rs
pomme-gpu-allocator/src/visualizer/: allocation_reports.rs  memory_chunks.rs  mod.rs
pomme-gpu-allocator/src/vulkan/: mod.rs  visualizer.rs
pomme-launcher/: package.json
pomme-launcher/src/: App.tsx  styles.css
pomme-launcher/src-tauri/src/: commands.rs  friends.rs  lib.rs
pomme-launcher/src/bindings/: index.ts
pomme-launcher/src/components/: Navbar.tsx
pomme-launcher/src/lib/: friends.ts  state.ts  types.ts
pomme-launcher/src/pages/: Friends.tsx
(+34 files in other folders)
