[workspace]
resolver = "3"
members = [
    "pomme-client",
    "pomme-launcher/src-tauri",
    "pomme-gpu-allocator"
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
directories = "6"
sha1_smol = "1"
open = "5"
base64 = "0.22"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }

# client
pyronyx = "=0.2.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
